d3d11videosink: add support rotate-method property
As fa as I understand swap chain
supports rotation: https://docs.microsoft.com/en-us/windows/win32/api/dxgi1_2/nf-dxgi1_2-idxgiswapchain1-setrotation
. Almost all gstreamer sink elements support rotate-method
, but there is not support rotate-method
inside d3d11videosink. Maybe this only applies to the graphical user interface and does not make sense in relation to gstreamer. This is feature request issue.